SEM2/COD7001/LABS/LAB6/cstn6/src/master_tests/invalid/bad_19.lang
var x = 19 var y = 10;